# lifecompanion2

./: .gitignore  biome.json  package.json  tsconfig.json  tsconfig.node.json  vite.editor.config.ts  vite.player.config.ts
.cargo/: config.toml
.husky/: commit-msg
entries/editor/: index.html
entries/player/: index.html
lang/en-US/editor/: app.json  editionToolbar.json
lang/en-US/shared/: actions.json  common.json  config.json
lang/fr-FR/editor/: app.json  editionToolbar.json
lang/fr-FR/player/: app.json
lang/fr-FR/shared/: actions.json  common.json  config.json
src/: AppEditor.vue  AppPlayer.vue  editor.ts  player.ts  shared.ts  vite-env.d.ts
src-tauri/editor/: Cargo.toml  tauri.conf.json
src-tauri/editor/.cargo/: config.toml
src-tauri/editor/icons/: icon.icns
src-tauri/editor/src/: main.rs
src-tauri/player/: Cargo.toml  tauri.conf.json
src-tauri/player/.cargo/: config.toml
src-tauri/player/capabilities/: default.json
src-tauri/player/icons/: icon.icns
src-tauri/player/src/: lib.rs  main.rs
src-tauri/shared/: Cargo.toml
src-tauri/shared/capabilities/: default.json
src-tauri/shared/src/: commands.rs  lib.rs
src/components/editor/: AddNewPageDialog.vue
src/components/selectionMode/: VirtualMouse.vue
src/components/shared/: ListDialog.vue  SnackbarQueue.vue  SpeedDial.vue
src/composables/editor/: useInFocusBreadcrumb.ts
src/composables/player/: useActivePlayer.ts  useKeyboardInput.ts  useMouseInput.ts
src/i18n/: editor.ts  player.ts  shared.ts
src/i18n/messages/: editor.ts  player.ts  shared.ts
vite/: config.ts
(+26 files in other folders)
