[package]
name = "lifecompanion-shared"
version = "0.1.0"
edition = "2021"

[lib]
name = "lifecompanion_shared_lib"
crate-type = ["rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SHARED_DEPS_START
tauri-plugin-opener = "2"
# SHARED_DEPS_END
